--- a/src/app/utils/templates/contactAdmin.ejs
+++ b/src/app/utils/templates/contactAdmin.ejs
@@ -6,9 +6,9 @@
     <title>New Contact Submission</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         background-color: #f9f9f9;
-        color: #333;
+        margin: 0;
         padding: 20px;
       }
       .container {
