--- a/src/app/utils/templates/contactReply.ejs
+++ b/src/app/utils/templates/contactReply.ejs
@@ -6,11 +6,12 @@
     <title>Contact Reply</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background-color: #f7f7f7;
-        color: #333;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f9f9f9;
+        margin: 0;
         padding: 20px;
       }
+
       .container {
         max-width: 600px;
         margin: auto;
